fix: worked on mobile layout

--- a/app/index/index.styl
+++ b/app/index/index.styl
@@ -159,14 +159,14 @@
         margin-top 20px
 
 /* move get-started button and shape that they do not overlap */
-@media(min-width: 701px)
-    #landing-page #intro .get-started
-        margin-top 100px
-        margin-bottom 80px
-
 @media(max-width: 700px)
     #landing-page #intro .get-started
         margin-top 50px
+        margin-bottom 180px
+
+@media(min-width: 701px)
+    #landing-page #intro .get-started
+        margin-top 80px
         margin-bottom 140px
 
 @media(max-width: 767px)
@@ -182,9 +182,17 @@
     #landing-page #popular-categories
         background-size 85%, cover
 
+    #landing-page #intro .get-started
+        margin-top 60px
+        margin-bottom 100px
+
 @media(min-width: 1201px) and (max-width: 1400px)
     #landing-page #popular-categories
         background-size 70%, cover
+
+    #landing-page #intro .get-started
+        margin-top 60px
+        margin-bottom 100px
 
 @media(min-width: 1401px) and (max-width: 1600px)
     #landing-page #popular-categories
@@ -193,3 +201,8 @@
 @media(min-width: 1601px)
     #landing-page #popular-categories
         background-size 52%, cover
+
+@media(min-width: 1400px)
+    #landing-page #intro .get-started
+        margin-top 60px
+        margin-bottom 10px
