--- a/app/statics/assets/styl/main.styl
+++ b/app/statics/assets/styl/main.styl
@@ -71,7 +71,6 @@ html, body
     margin 0
     width 100%
     height 100%
-    min-width 480px
     position relative
     font-family Colaborate, Arial, Helvetica, sans-serif
     font-size 12px
