--- a/app/statics/footer.styl
+++ b/app/statics/footer.styl
@@ -3,7 +3,7 @@
 footer
     position absolute
     bottom 0
-    height 80px
+    min-height 80px
     color white
     width 100%
     font-size 12px
@@ -12,8 +12,7 @@ footer
 
     a
         display inline-block
-        padding 0 5px
-        height 30px
+        padding 5px 5px
 
     .middle
         text-align center
@@ -35,3 +34,11 @@ footer
             line-height 40px
             vertical-align middle
             float right
+
+    li
+        list-style-type none
+
+        &:nth-child(2n)
+            display none
+
+
